# Like-AVITO-app-with-Django_3

./: README.md  manage.py  pyproject.toml
Homework_28v2/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  serializer.py  view.py
ads/views/: ad.py
datasets/: data.py  user.csv  user.json
users/: admin.py  models.py  serializers.py  urls.py  views.py
